interpreter-janeklang/tests/bad/06_noReturnInIf_9.janek
int skibidi(){
    if(true){
        "skibidi";
    }
    else{
        return 0;
    }
}

int main(){
    skibidi();
}